[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/page33-34/Sawdust.webp" type="Texture" id=1]
[ext_resource path="res://assets/page33-34/Tree2.webp" type="Texture" id=2]
[ext_resource path="res://assets/page33-34/Tree1.webp" type="Texture" id=3]
[ext_resource path="res://assets/page33-34/bg-page.webp" type="Texture" id=4]
[ext_resource path="res://assets/page33-34/worm-granddaugther.webp" type="Texture" id=5]
[ext_resource path="res://assets/page33-34/worm-granfather.webp" type="Texture" id=6]
[ext_resource path="res://assets/fonts/Lato-Medium.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://components/GUI/GUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/ADLA/page33-34.gd" type="Script" id=9]
[ext_resource path="res://assets/general/pointer_start.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 7 )

[node name="Page33-34" type="Node2D"]
script = ExtResource( 9 )

[node name="BackgroundImage" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 4 )
expand = true

[node name="AnimatedTree" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 960.5, 537.5 )
scale = Vector2( 0.369636, 0.417629 )
frames = SubResource( 1 )
speed_scale = 0.8
playing = true

[node name="ImageSawdust" type="TextureRect" parent="."]
margin_left = 606.0
margin_top = 425.0
margin_right = 1917.0
margin_bottom = 1084.0
texture = ExtResource( 1 )
expand = true

[node name="ImageWormGrandfather" type="TextureRect" parent="."]
margin_left = 1517.0
margin_top = 182.0
margin_right = 1895.0
margin_bottom = 631.0
texture = ExtResource( 6 )
expand = true

[node name="ImageWormGranddaugter" type="TextureRect" parent="."]
margin_left = 900.0
margin_top = 578.0
margin_right = 1278.0
margin_bottom = 1027.0
texture = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="."]
margin_left = 50.0
margin_top = 119.0
margin_right = 1003.0
margin_bottom = 836.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Por su parte, los insectos, además de temerosos y nerviosos,
estaban muy confundidos por aquella abrupta mudanza.
Sabían perfectamente que, si se quedaban, morirían
desamparados; pero, si se mudaban a otro árbol, ¿les gustaría
el nuevo vecindario? ¿Las costumbres en el nuevo árbol serían
compatibles con las suyas? Eran entendibles sus espontáneas
preocupaciones y, en estas circunstancias, resultaba difícil elegir.

—Yo no iré a ningún lado —declaró un gusanito de seda—. Ya no
soy el mismo joven que disfrutaba de nuevas aventuras.

En efecto, el pobre gusano estaba tan viejito que apenas
podía sostener sus antenas y la tos no lo dejaba hablar bien.
Tampoco podía caminar con agilidad como su vivaz nieta, que
trataba de convencerlo:

—Abuelito, ¡tienes que venir! ¿Acaso no entiendes
que nuestra casa desaparecerá?"

[node name="ButtonModalWorm" type="Button" parent="."]
margin_left = 1132.0
margin_top = 858.0
margin_right = 1212.0
margin_bottom = 938.0
mouse_default_cursor_shape = 2
icon = ExtResource( 10 )
flat = true
expand_icon = true

[node name="GUI" parent="." instance=ExtResource( 8 )]

[connection signal="tree_entered" from="." to="." method="_on_Page3334_tree_entered"]
[connection signal="mouse_entered" from="ButtonModalWorm" to="." method="_on_ButtonModalWorm_mouse_entered"]
[connection signal="mouse_exited" from="ButtonModalWorm" to="." method="_on_ButtonModalWorm_mouse_exited"]
[connection signal="pressed" from="ButtonModalWorm" to="." method="_on_ButtonModalWorm_pressed"]
